welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: not found: type boolean
  var c:boolean = false
        ^SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
    recule()
          ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
    recule()
          ^