welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var c:boolean = false
  avance()
    if (getCouleurSol().equals(Color.green)){
    c=true
    recule()
  } else {
    recule()
  }
}